# rud

./: .gitignore  meson.build
benchmark/: meson.build
doc/: rud.md  test.md
doc/documentation/: memory.md  root.md  string.md  types.md
example/base/: example_result.cpp  meson.build
include/rud/: compile_settings.hpp  env.hpp  macros.hpp  memory.hpp  option.hpp  result.hpp  string.hpp  system.hpp  types.hpp  variant.hpp
include/rud/arch_low/: memory.hpp
include/rud/base/: compile_settings.hpp  destroyer.hpp  env.hpp  function.hpp  macros.hpp  memory.hpp  option.hpp  result.hpp  string.hpp  string_functions.hpp  system.hpp  types.hpp
include/rud/ds/: array.hpp  c_darray.hpp  c_dlist.hpp  c_list.hpp  c_vector.hpp  dlist.hpp  dnode.hpp  linear_view.hpp  list.hpp  node.hpp  vector.hpp
include/rud/os/: directory.hpp  file.hpp  file_system.hpp  io.hpp  read_stream.hpp  standard_streams.hpp  std_err.hpp  std_in.hpp  std_out.hpp  stderr.hpp  stdout.hpp  streams.hpp  system.hpp  write_stream.hpp
include/rud/os/core/: c_dir_entry.hpp  dir_entry_type.hpp  directory_create_mode.hpp  file_access_mode.hpp  file_create_mode.hpp  file_metadata.hpp  file_seek_from.hpp  io_error.hpp  (+3 more)
include/rud/os_low/: io.hpp  io_error.hpp  system.hpp
src/: compile_settings.cpp  main.cpp  memory.cpp  meson.build  string.cpp  system.cpp
src/base/: compile_settings.cpp  memory.cpp  meson.build  string.cpp  string_functions.cpp  system.cpp
src/os/: directory.cpp  file.cpp  file_system.cpp  io.cpp  meson.build  standard_streams.cpp  std_err.cpp  std_in.cpp  std_out.cpp  stderr.cpp  stdout.cpp  system.cpp
src/os/platform/: meson.build
src/os_low/: io.cpp  meson.build  system.cpp
src/os_low/linux/: io.cpp  meson.build  system.cpp
test/: helpers.hpp  meson.build
test/base/: meson.build  test_compile_settings.cpp  test_memory.cpp  test_option.cpp  test_result.cpp
test/ds/: meson.build  test_array.cpp  test_c_darray.cpp  test_c_dlist.cpp  test_c_list.cpp
tools/: benchmark.py
(+24 files in other folders)
